--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="three">
-            <p style="background-color: rgba(0, 0, 0, 0.1)">
+            <p style="color: #fff; background-color: rgba(0, 0, 0, 0.1)">
                 xmas is the season of giving
             </p>
         </div>
@@ -53,7 +53,7 @@
             </div>
         </div>
 
-        <div class="five">
+        <div class="five" style="color: #fff; background-color: rgba(0, 0, 0, 0.1)">
             <p class="idea-1">is what i was gonna send you...</p>
             <p class="idea-2">but you know how i be sometimes</p>
             <p class="idea-3">
@@ -79,7 +79,7 @@
             </p>
         </div>
 
-        <div class="six">
+        <div class="six" style="color: #fff; background-color: rgba(0, 0, 0, 0.1)">
             <img src="./img/herpfp.png" alt="profile" class="profile-picture" id="imagePath"/>
             <div class="wish">
                 <h3 style="color: #07b516", class="wish-hbd">Happy Holidays!</h3>
@@ -156,7 +156,7 @@
             </svg>
         </div> -->
 
-        <div class="nine">
+        <div class="nine" style="color: #fff; background-color: rgba(0, 0, 0, 0.1)">
             <p>Okay, now come back and tell me if you liked it.</p>
             <p id="replay">Or click, if you want to watch it again.</p>
             <p class="last-smile">:3</p>
