--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 <span>:3</span>
             </p>
             <p class="idea-6">
-                <span>s</span>
-                <span>o</span>
+                <span style="font-size:1rem;">s</span>
+                <span style="font-size:1rem;">o</span>
                 <br>
                 <span>Y</span>
                 <span>U</span>
