--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="three">
             <p>
-                xmas is the season of giving
+                christmas time is the season of giving
             </p>
         </div>
 
@@ -47,7 +47,6 @@
                 <img src="./img/yubi.png" alt="Icon" class="round-img"> <!-- Image added here -->
                 <p style="color: #fff;" class="hbd-chatbox"> 
                     Hey beautiful, Merry Christmas! I hope you have been resting, living life to the fullest, and just being happy. Seeing you happy makes me happy! 
-                    ...
                 </p>
                 <p style="visibility:hidden" class="fake-btn">Send</p>
             </div>
