--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                 <img src="img/ornament-2.png" alt="" />
                 <img src="img/ornament-1.png" alt="" />
                 <img src="img/ornament-3.png" alt="" />
+                <img src="img/gift-1.png" alt="" />
                 <img src="img/ornament-1.png" alt="" />
                 <img src="img/ornament-2.png" alt="" />
                 <img src="img/ornament-3.png" alt="" />
@@ -100,6 +101,22 @@
                 <img src="img/ornament-1.png" alt="" />
                 <img src="img/ornament-2.png" alt="" />
                 <img src="img/ornament-3.png" alt="" />
+                <img src="img/gift-2.png" alt="" />
+                <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-1.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
+                <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
+                <img src="img/ornament-1.png" alt="" />
+                <img src="img/gift-2.png" alt="" />
+                <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-1.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
+                <img src="img/ornament-1.png" alt="" />
+                <img src="img/gift-1.png" alt="" />
+                <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
                 <img src="img/ornament-2.png" alt="" />
                 <img src="img/ornament-1.png" alt="" />
                 <img src="img/ornament-3.png" alt="" />
@@ -108,52 +125,10 @@
                 <img src="img/ornament-1.png" alt="" />
                 <img src="img/ornament-2.png" alt="" />
                 <img src="img/ornament-1.png" alt="" />
-                <img src="img/ornament-3.png" alt="" />
-                <img src="img/ornament-3.png" alt="" />
-                <img src="img/ornament-1.png" alt="" />
-                <img src="img/ornament-2.png" alt="" />
-                <img src="img/ornament-3.png" alt="" />
-                <img src="img/ornament-2.png" alt="" />
-                <img src="img/ornament-1.png" alt="" />
-                <img src="img/ornament-3.png" alt="" />
-                <img src="img/ornament-2.png" alt="" />
-                <img src="img/ornament-3.png" alt="" />
-                <img src="img/ornament-1.png" alt="" />
-                <img src="img/ornament-2.png" alt="" />
-                <img src="img/ornament-1.png" alt="" />
+                <img src="img/gift-1.png" alt="" />
                 <img src="img/ornament-3.png" alt="" />
             </div>
         </div>
-
-        <!-- <div class="eight">
-            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="20" cy="20" r="20" />
-            </svg>
-            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="20" cy="20" r="20" />
-            </svg>
-            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="20" cy="20" r="20" />
-            </svg>
-            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="20" cy="20" r="20" />
-            </svg>
-            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="20" cy="20" r="20" />
-            </svg>
-            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="20" cy="20" r="20" />
-            </svg>
-            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="20" cy="20" r="20" />
-            </svg>
-            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="20" cy="20" r="20" />
-            </svg>
-            <svg viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="20" cy="20" r="20" />
-            </svg>
-        </div> -->
 
         <div class="nine">
             <p>Okay, now come back and tell me if you liked it.</p>
