--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <img src="img/ornament-2.png" alt="" />
                 <img src="img/ornament-1.png" alt="" />
                 <img src="img/ornament-3.png" alt="" />
-                <img src="img/gift-1.png" alt="" />
+                <img style="width: 2rem;" src="img/gift-1.png" alt="" />
                 <img src="img/ornament-1.png" alt="" />
                 <img src="img/ornament-2.png" alt="" />
                 <img src="img/ornament-3.png" alt="" />
@@ -101,31 +101,31 @@
                 <img src="img/ornament-1.png" alt="" />
                 <img src="img/ornament-2.png" alt="" />
                 <img src="img/ornament-3.png" alt="" />
-                <img src="img/gift-2.png" alt="" />
+                <img style="width: 2rem;" src="img/gift-2.png" alt="" />
                 <img src="img/ornament-2.png" alt="" />
                 <img src="img/ornament-1.png" alt="" />
                 <img src="img/ornament-3.png" alt="" />
                 <img src="img/ornament-2.png" alt="" />
                 <img src="img/ornament-3.png" alt="" />
                 <img src="img/ornament-1.png" alt="" />
-                <img src="img/gift-2.png" alt="" />
+                <img style="width: 2rem;" src="img/gift-2.png" alt="" />
+                <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-1.png" alt="" />
+                <img style="width: 2rem;" src="img/ornament-3.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
+                <img src="img/ornament-1.png" alt="" />
+                <img style="width: 2rem;" src="img/gift-1.png" alt="" />
+                <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-3.png" alt="" />
                 <img src="img/ornament-2.png" alt="" />
                 <img src="img/ornament-1.png" alt="" />
                 <img src="img/ornament-3.png" alt="" />
-                <img src="img/ornament-3.png" alt="" />
-                <img src="img/ornament-1.png" alt="" />
-                <img src="img/gift-1.png" alt="" />
-                <img src="img/ornament-2.png" alt="" />
-                <img src="img/ornament-3.png" alt="" />
-                <img src="img/ornament-2.png" alt="" />
-                <img src="img/ornament-1.png" alt="" />
-                <img src="img/ornament-3.png" alt="" />
                 <img src="img/ornament-2.png" alt="" />
                 <img src="img/ornament-3.png" alt="" />
                 <img src="img/ornament-1.png" alt="" />
                 <img src="img/ornament-2.png" alt="" />
                 <img src="img/ornament-1.png" alt="" />
-                <img src="img/gift-1.png" alt="" />
+                <img style="width: 2rem;" src="img/gift-1.png" alt="" />
                 <img src="img/ornament-3.png" alt="" />
             </div>
         </div>
