Update and rename index.html to gift.html

--- a/gift.html
+++ b/gift.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy 19th Birthday!</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Happy 20th Birthday!</title>
+    <link rel="stylesheet" type="text/css" href="style-2.css">
 </head>
 <body>
 
