--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         </div>
 
         <div class="six">
+            <h5 id="wishText"> CLICK ME! </h5>
             <a href="gift.html"><img src="./img/present.png" alt="profile" class="profile-picture" id="imagePath"/></a>
             <div class="wish">
                 <h3 style="color: #07b516", class="wish-hbd">Happy Holidays!</h3>
