--- a/gift.html
+++ b/gift.html
@@ -9,10 +9,10 @@
 <body>
 
     <header>
-   <a href="#" class="logo">Name</a>
+   <a href="index.html" class="logo">Rakuyama Yuri</a>
 
    <ul>
-    <li><a href="#" class="active">Home</a></li>
+    <li><a href="index.html" class="active">Main Page</a></li>
     <li><a href="#sec">Message</a></li>
    </ul>
 
@@ -23,15 +23,15 @@
     <img src="./Media/stars(1).png" id="stars">
     <img src="./Media/birthday words.png" id="moon">
     <img src="./Media/Exploders.png" id="mountains_behind">
-    <h2 id="text">Félicitations!</h2>
-    <a href="#gift" id="btn">Gift</a>
+    <h2 id="text">Congratulations!</h2>
+    <a href="#gift" id="btn">Present</a>
     <img src="./Media/The ENTIRE Background.png" id="mountains_front">
 
 
 </section>
 
 <div class="sec" id="sec">
-    <h1>Congratulations on your birthday! 🎂🎉🥳</h1>
+    <h1>Congratulations! It's your birthday! 🎂🎉🥳</h1>
     <p> Lorem ipsum dolor amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad 
         minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
         in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
@@ -59,7 +59,7 @@
 
         
 
-        <a href="https://ibb.co/X23WMVc" target="_blank">
+        <a href=" " target="_blank">
             <img src="/Media/GIFT BOX.png" alt="Gift Box" id="gift-box-image" class="gift_box">
         </a>
 
@@ -70,27 +70,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- old code-->
-    <!--<header>
-        <h1>Happy 19th Birthday, Louai</h1>
-    </header>
-
-   <div class="homeContainer">
-    <div class="cakeContainer">
-        <img src="./Media/homePageCake.png">
-    </div>
-</div>-->
-
