--- a/gift.html
+++ b/gift.html
@@ -7,25 +7,14 @@
     <link rel="stylesheet" type="text/css" href="style-2.css">
 </head>
 <body>
-
-    <header>
-   <a href="index.html" class="logo">Rakuyama Yuri</a>
-
-   <ul>
-    <li><a href="index.html" class="active">Main Page</a></li>
-    <li><a href="#sec">Message</a></li>
-   </ul>
-
-    </header>
-
 <section>
 
-    <img src="./Media/stars(1).png" id="stars">
-    <img src="./Media/birthday words.png" id="moon">
-    <img src="./Media/Exploders.png" id="mountains_behind">
-    <h2 id="text">Congratulations!</h2>
+    <!-- <img src="./Media/stars(1).png" id="stars"> -->
+    <!-- <img src="./Media/birthday words.png" id="moon"> --> 
+    <!-- <img src="./Media/Exploders.png" id="mountains_behind"> -->
+    <h2 id="text">MERRY CHRISTLER!</h2>
     <a href="#gift" id="btn">Present</a>
-    <img src="./Media/The ENTIRE Background.png" id="mountains_front">
+    <!-- <img src="./Media/The ENTIRE Background.png" id="mountains_front"> -->
 
 
 </section>
@@ -51,19 +40,6 @@
          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip. 
         <br><br>
     </p>
-
-    <h2 id="gift">Click on this image to reveal your surpise.</h2>
-    <br><br>
-
-  <div class="gift-box-container">
-
-        
-
-        <a href=" " target="_blank">
-            <img src="/Media/GIFT BOX.png" alt="Gift Box" id="gift-box-image" class="gift_box">
-        </a>
-
-        
     </div>
 </div>
 
