--- a/gift.html
+++ b/gift.html
@@ -12,7 +12,7 @@
     <!-- <img src="./Media/stars(1).png" id="stars"> -->
     <!-- <img src="./Media/birthday words.png" id="moon"> --> 
     <!-- <img src="./Media/Exploders.png" id="mountains_behind"> -->
-    <h2 id="text">MERRY CHRISTLER!</h2>
+    <h2>MERRY CHRISTLER!</h2>
     <a href="#gift" id="btn">Present</a>
     <!-- <img src="./Media/The ENTIRE Background.png" id="mountains_front"> -->
 
