--- a/gift.html
+++ b/gift.html
@@ -20,25 +20,14 @@
 </section>
 
 <div class="sec" id="sec">
-    <h1>Congratulations! It's your birthday! 🎂🎉🥳</h1>
-    <p> Lorem ipsum dolor amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad 
-        minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
-        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-        officia deserunt mollit anim est laborum.<br><br>
+    <h1>This Holiday Season...</h1>
+    <p> Hey beautiful! You know, I really love the holidays, particularly this one. I love the festivities that come with it and the warm 
+        and delicious food that comes with it. In my culture, we do a whole bunch of things. But I've not been able to really participate 
+        in any. The last couple Christmas', it's been spent with my brothers and mother. No one else. But this Christmas, I'm excited to 
+        spend it with you, even the smallest bit. That's all I need in life. <br><br>
 
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore 
-        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    
-         <br><br>
-        
-         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
-         ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-         reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-         sunt in culpa qui officia deserunt mollit. <br><br>
-
-         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
-         ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip. 
-        <br><br>
+        Now, I don't know what Christmas is like in Japan. Heck, it's not even a national holiday, ey? But I am hoping to share some of the 
+        holiday spirit with you. To bring some of the joy that comes with it to you. <br><br>
     </p>
     </div>
 </div>
