--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
         </div>
 
         <div class="six">
-            <a href="gift.html">CLICK ME<img src="./img/present.png" alt="profile" class="profile-picture" id="imagePath"/></a>
+            <a href="gift.html"><img src="./img/present.png" alt="CLICK ME" class="profile-picture" id="imagePath"/></a>
             <div class="wish">
                 <h3 style="color: #07b516", class="wish-hbd">Happy Holidays!</h3>
                 <h5 style="color: #fff;", id="wishText">May you be blessed and happy for life <3 </h5>
-                <!-- <h5 class="the-link" id="wishText"><a href="special.html">Gifts</a></h5> -->
+                <h5 class="the-link" id="wishText">CLICK PRESENT</h5>
             </div>
         </div>
 
