--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="wish">
                 <h3 style="color: #07b516", class="wish-hbd">Happy Holidays!</h3>
                 <h5 style="color: #fff;", id="wishText">May you be blessed and happy for life <3 </h5>
-                <h5 class="the-link" id="wishText">CLICK PRESENT</h5>
+                <h5 style="color: #fff" class="the-link" id="wishText">CLICK PRESENT</h5>
             </div>
         </div>
 
