--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <p class="idea-1">is what i was gonna send you...</p>
             <p class="idea-2">but you know how i be sometimes</p>
             <p class="idea-3">
-                i really wanted to do <em style="color: #969696, font-size: 2.5rem">something</em><br>
+                i really wanted to do <em style="color: #969696, font-weight: bold, font-size: 3rem">something</em><br>
                 <strong>better</strong>
                 .
             </p>
