--- a/gift.html
+++ b/gift.html
@@ -25,7 +25,7 @@
     </audio>
 
     <div class="container">
-    <h2 id="text">MERRY CHRISTLER!</h2>
+    <h1>MERRY CHRISTLER!</h1>
     <a href="#gift" id="btn">Present</a>
  </div>
 
