--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <div class="five">
             <p class="idea-1">is what i was gonna send you...</p>
-            <p class="idea-2">but you know how i be sometimes</p>
+            <p class="idea-2">but yk how i be sometimes</p>
             <p class="idea-3">
                 i really wanted to do <em style="color: #969696, font-weight: bold, font-size: 3rem">something</em><br>
                 <strong>better</strong>
