--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                 <span style="font-size:3rem;">s</span>
                 <span style="font-size:3rem;">o</span>
                 <br>
-                <span>Y</span>
-                <span>U</span>
-                <span>R</span>
-                <span>I</span>
+                <span class="usercolor">Y</span>
+                <span class="usercolor">U</span>
+                <span class="usercolor">R</span>
+                <span class="usercolor">I</span>
             </p>
         </div>
 
