--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div class="four">
             <div class="text-box">
-                <img src="./img/yubi.png" alt="Icon" class="round-img"> <!-- Image added here -->
+                <img src="./img/yubi.png" alt="Icon" class="round-img"> 今日 00:00 <!-- Image added here -->
                 <p style="color: #fff;" class="hbd-chatbox"> 
                     Hey beautiful, Merry Christmas! I hope you have been resting, living life to the fullest, and just being happy. Seeing you happy makes me happy! 
                 </p>
