--- a/index.html
+++ b/index.html
@@ -43,14 +43,18 @@
         </div>
 
         <div class="four">
-            <div class="text-box">
-                <img src="./img/yubi.png" alt="Icon" class="round-img"> <p style="color: #969696; font-size: 10px;">今日 00:00</p> <!-- Image added here -->
-                <p style="color: #fff;" class="hbd-chatbox"> 
-                    Hey beautiful, Merry Christmas! I hope you have been resting, living life to the fullest, and just being happy. Seeing you happy makes me happy! 
-                </p>
-                <p style="visibility:hidden" class="fake-btn">Send</p>
-            </div>
+    <div class="text-box">
+        <!-- New div to hold image and first paragraph inline -->
+        <div style="display: flex; align-items: flex-start;">
+            <img src="./img/yubi.png" alt="Icon" class="round-img" style="margin-right: 5px;"> 
+            <p style="color: #969696; font-size: 10px; margin: 0;">今日 00:00</p>
         </div>
+        <p style="color: #fff;" class="hbd-chatbox"> 
+            Hey beautiful, Merry Christmas! I hope you have been resting, living life to the fullest, and just being happy. Seeing you happy makes me happy! 
+        </p>
+        <p style="visibility:hidden" class="fake-btn">Send</p>
+    </div>
+</div>
 
         <div class="five">
             <p class="idea-1">is what i was gonna send you...</p>
