--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
         <!-- New div to hold image and first paragraph inline -->
         <div style="display: flex; align-items: flex-start;">
             <img src="./img/yubi.png" alt="Icon" class="round-img" style="margin-right: 5px;"> 
+<p style="color: #fff; font-size: 20px; margin: 0;"Suwan</p>
             <p style="color: #969696; font-size: 10px; margin: 0;">今日 00:00</p>
         </div>
         <p style="color: #fff;" class="hbd-chatbox"> 
-            Hey beautiful, Merry Christmas! I hope you have been resting, living life to the fullest, and just being happy. Seeing you happy makes me happy! 
+            Hey beautiful, Merry Christmas! I hope you have been getting sleep, living life to the fullest, and just being happy. Seeing you happy makes me so happy! 
         </p>
         <p style="visibility:hidden" class="fake-btn">Send</p>
     </div>
