--- a/gift.html
+++ b/gift.html
@@ -17,13 +17,7 @@
 </head>
 
 <body>
-
- 
-    <div class="container">
-    <h1>MERRY CHRISTLER!</h1>
-    <a href="#gift" id="btn">Present</a>
- </div>
-
-    <script src="script.js"></script>
+  <div class="container">
+    <h1>MERRY
 </body>
 </html>
