--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- New div to hold image and first paragraph inline -->
         <div style="display: flex; align-items: flex-start;">
             <img src="./img/yubi.png" alt="Icon" class="round-img" style="margin-right: 5px;"> 
-<p style="color: #fff; font-size: 20px; margin: 0;"Suwan</p>
+<p style="color: #fff; font-size: 20px; margin: 0;">Suwan</p>
             <p style="color: #969696; font-size: 10px; margin: 0;">今日 00:00</p>
         </div>
         <p style="color: #fff;" class="hbd-chatbox"> 
