--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/Christmas.mp4">
-        </source>
+        <source src="./music/Christmas.mp4"></source>
         Your browser isn't invited for super fun audio time.
     </audio>
 
     <div class="container">
         <div class="one">
             <h1 style="color: #fff;", class="one">
-                Merry
-                <span id="name">Christmas</span>
+                Merry Christmas
             </h1>
             <p style="color: #fff;" class="two" id="greetingText">
                 Hope you are having a splendid day!
@@ -45,10 +43,11 @@
         <div class="four">
     <div class="text-box">
         <!-- New div to hold image and first paragraph inline -->
-        <div style="display: flex; align-items: flex-start;">
-            <img src="./img/yubi.png" alt="Icon" class="round-img" style="margin-right: 5px;"> 
-<p style="color: #fff; font-size: 20px; margin: 0;">Suwan</p>
-            <p style="color: #969696; font-size: 10px; margin: 0; vertical-align: middle;">今日 00:00</p>
+        <div style="display: flex;">
+            <img src="./img/yubi.png" alt="Icon" class="round-img" style="margin-right: 5px;">
+            <p style="color: #fff; font-size: 20px; margin: 0;">Suwan</p>
+            <!-- Use align-self: flex-end on the paragraph to align it to the bottom -->
+            <p style="color: #969696; font-size: 10px; margin: 0; align-self: flex-end;">今日 00:00</p>
         </div>
         <p style="color: #fff;" class="hbd-chatbox"> 
             Hey beautiful, Merry Christmas! I hope you have been getting sleep, living life to the fullest, and just being happy. Seeing you happy makes me so happy! 
