--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- New div to hold image and first paragraph inline -->
         <div style="display: flex;">
             <img src="./img/yubi.png" alt="Icon" class="round-img" style="margin-right: 5px;">
-            <p style="color: #fff; font-size: 20px; margin: 0;">Suwan</p>
+            <p style="color: #fff; font-size: 20px; margin: 0; align-self: flex-end;">Suwan</p>
             <!-- Use align-self: flex-end on the paragraph to align it to the bottom -->
             <p style="color: #969696; font-size: 10px; margin: 0; align-self: flex-end;">今日 00:00</p>
         </div>
