--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="three">
             <p>
-                christmas time is the season of giving
+                i wanted to write you smth
             </p>
         </div>
 
