--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
         <!-- New div to hold image and first paragraph inline -->
         <div style="display: flex; align-items: flex-end;">
             <img src="./img/yubi.png" alt="Icon" class="round-img" style="margin-right: 5px;"> 
-            <p style="color: #fff; font-size: 20px; margin: 0; margin-right: 5px;">Suwan</p>
-            <p style="color: #969696; font-size: 10px; margin: 0;">今日 00:00</p>
+            <!-- Use align-self: flex-end on both paragraphs -->
+            <p style="color: #fff; font-size: 20px; margin: 0; margin-right: 5px; align-self: flex-end;">Suwan</p>
+            <p style="color: #969696; font-size: 10px; margin: 0; align-self: flex-end;">今日 00:00</p>
         </div>
+
         <p style="color: #fff;" class="hbd-chatbox"> 
             Hey beautiful, Merry Christmas! I hope you have been getting sleep, living life to the fullest, and just being happy. Seeing you happy makes me so happy! 
         </p>
