--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <strong>better</strong>
                 .
             </p>
-            <p class="idea-4">because, i love you</p>
+            <p class="idea-4">because, i care for you</p>
             <p class="idea-5">
                 and i want you 
                 to be happy
