--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div style="display: flex; align-items: flex-end;">
             <img src="./img/yubi.png" alt="Icon" class="round-img" style="margin-right: 5px;"> 
             <!-- Use align-self: flex-end on both paragraphs -->
-            <p style="color: #fff; font-size: 20px; margin: 0; align-self: flex-end;">Suwan</p>
+            <p>Suwan</p>
             <p style="color: #969696; font-size: 10px; margin: 0; align-self: flex-end;">今日 00:00</p>
         </div>
 
