--- a/gift.html
+++ b/gift.html
@@ -15,7 +15,7 @@
     <!-- My Style -->
     <link rel="stylesheet" href="./style/main.css" />
 </head>
-
+    <img src="./img/Drawing4Mate" alt="Icon" class="" style="margin-right: 10px;"> 
 <body>
   <div class="container">
     <h1>MERRY
