--- a/gift.html
+++ b/gift.html
@@ -15,9 +15,10 @@
     <!-- My Style -->
     <link rel="stylesheet" href="./style/main.css" />
 </head>
-    <img src="./img/Drawing4Mate" alt="Icon" class="" style="margin-right: 10px;"> 
 <body>
   <div class="container">
-    <h1>MERRY
+    <h1>MERRY CHRISTMAS</h1>
+      <h2>A Drawing for You </h2>
+        <img src="./img/Drawing4Mate" alt="Icon" class="" style="margin-right: 10px;"> 
 </body>
 </html>
