--- a/gift.html
+++ b/gift.html
@@ -19,6 +19,6 @@
   <div class="container">
     <h1>MERRY CHRISTMAS</h1>
     <h2>A Drawing for You </h2>
-    <img src="./img/Drawing4Mate" alt="Drawing I drew" class="""> 
+    <img src="./img/Drawing4Mate" alt="Drawing I drew" class=""> 
 </body>
 </html>
