--- a/gift.html
+++ b/gift.html
@@ -15,10 +15,20 @@
     <!-- My Style -->
     <link rel="stylesheet" href="./style/main.css" />
 </head>
+
 <body>
-  <div class="container">
-    <h1>MERRY CHRISTMAS</h1>
-    <h2>A Drawing for You </h2>
+
+    <audio class="song" loop autoplay>
+        <source src="./music/Christmas.mp4"></source>
+        Your browser isn't invited for super fun audio time.
+    </audio>
+
+    <div class="container">
+        <div class="one">
+            <h1 style="color: #fff;", class="one">
+                Merry Christmas
+            </h1>
+    <h2 class="two">A Drawing for You </h2>
     <img src="./img/Drawing4Mate" alt="Drawing I drew" class=""> 
 </body>
 </html>
