--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                 <img src="img/ornament-3.png" alt="" />
                 <img src="img/ornament-1.png" alt="" />
                 <img src="img/ornament-2.png" alt="" />
+                <img src="img/ornament-2.png" alt="" />
                 <img src="img/ornament-3.png" alt="" />
                 <img src="img/ornament-2.png" alt="" />
                 <img src="img/ornament-1.png" alt="" />
