--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <p style="color: #fff;" class="hbd-chatbox"> 
-            Hey beautiful, Merry Christmas! I hope you have been getting sleep, living life to the fullest, and just being happy. Seeing you happy makes me so happy! 
+            Hey beautiful, Merry Christmas! I hope you have been getting sleep, living life to the fullest, and just being happy. Seeing you happy makes me so happy! ... 
         </p>
         <p style="visibility:hidden" class="fake-btn">Send</p>
     </div>
