--- a/gift.html
+++ b/gift.html
@@ -28,7 +28,17 @@
             <h1 style="color: #fff;", class="one">
                 Merry Christmas
             </h1>
-    <h2 class="two">A Drawing for You </h2>
-    <img src="./img/Drawing4Mate" alt="Drawing I drew" class=""> 
+            <p style="color: #fff;" class="two" id="greetingText">
+                i drew this for you
+                <img src=".img/Drawing4Mate.png" alt="Drawing I Made" style="width: 100vw; height: 100vh; vertical-align: middle;">
+            </p>
+        </div>
+
 </body>
+    <!-- Greensock -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <!-- Sweetalert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="application/javascript" src="./script/main.js"></script>
+
 </html>
