--- a/gift.html
+++ b/gift.html
@@ -30,7 +30,7 @@
             </h1>
             <p style="color: #fff;" class="two" id="greetingText">
                 i drew this for you
-                <img src=".img/Drawing4Mate.png" alt="Drawing I Made" style="width: 100vw; height: 100vh; vertical-align: middle;">
+                <img src="./img/Drawing4Mate.png" alt="Drawing I Made" style="width: 100vw; height: 100vh; vertical-align: middle;">
             </p>
         </div>
 
