--- a/gift.html
+++ b/gift.html
@@ -33,6 +33,7 @@
                 <img src="./img/Drawing4Mate.png" alt="Drawing I Made" style="width: 100vw; height: 100vh; vertical-align: middle;">
             </p>
         </div>
+    </div>
 
 </body>
     <!-- Greensock -->
