--- a/gift.html
+++ b/gift.html
@@ -17,18 +17,61 @@
 </head>
 
 <body>
+
+    <audio class="song" loop autoplay>
+        <source src="./music/Christmas.mp4"></source>
+        Your browser isn't invited for super fun audio time.
+    </audio>
+
     <div class="container">
         <div class="one">
             <h1 style="color: #fff;", class="one">
                 Merry Christmas
             </h1>
             <p style="color: #fff;" class="two" id="greetingText">
-                i drew this for you
-                <img src="./img/Drawing4Mate.png" alt="Drawing I Made" style="width: 100vw; height: 100vh; vertical-align: middle;">
+                Hope you are having a splendid day!
+                <img src="https://static-00.iconduck.com/assets.00/party-popper-emoji-512x504-93a04c8z.png" alt="Party Popper" style="width: 20px; height: 20px; vertical-align: middle;">
             </p>
         </div>
-    </div>
 
+        <div class="three">
+            <p>
+                i wanted to write you smth
+            </p>
+        </div>
+
+        <div class="four">
+    <div class="text-box">
+        <!-- New div to hold image and first paragraph inline -->
+        <div style="display: flex; align-items: flex-end;">
+            <img src="./img/yubi.png" alt="Icon" class="round-img" style="margin-right: 10px;"> 
+            <!-- Use align-self: flex-end on both paragraphs -->
+            <p>Suwan</p>
+            <p style="color: #969696; font-size: 10px; margin: 0; align-self: flex-end;">今日 00:00</p>
+        </div>
+
+        <p style="color: #fff;" class="hbd-chatbox"> 
+            Hey beautiful, Merry Christmas! I hope you have been getting sleep, living life to the fullest, and just being happy. Seeing you happy makes me so happy! ... 
+        </p>
+        <p style="visibility:hidden" class="fake-btn">Send</p>
+    </div>
+</div>
+
+        <div class="five">
+            <p class="idea-1">is what i was gonna send you...</p>
+            <p class="idea-2">but yk how i be sometimes</p>
+            <p class="idea-3">
+                i really wanted to do <em style="color: #969696, font-weight: bold, font-size: 3rem">something</em><br>
+                <strong>better</strong>
+                .
+            </p>
+            <p class="idea-4">because, i care for you</p>
+            <p class="idea-5">
+                and i want you 
+                to be happy
+                forever
+                <span>:3</span>
+            </p>
 </body>
     <!-- Greensock -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
